--- a/src/sidebar.mdx
+++ b/src/sidebar.mdx
@@ -1,4 +1,4 @@
 - [Getting Started](/docs/getting-started/)
-- [Auth](/docs/auth/)
+- [Auth Provider](/docs/auth/)
 - [Callback](/docs/callback/)
 - [Enjoy](/docs/enjoy/)
